
VERSION = 0.6.3

	* rewrited some methods on db interfaces
	* dropped the DictCursor psycopg2 feature
	* manual corrections and new index layout
	* new MotherManager family functions: actionMany...
	* new MotherManger method: insertManyChildren
	* new class MotherMany
	* abdbda imports (and exports) multiple query methods
	* sqlite and postgres have now mq_query and mg_query
	* new method on postgres, sqlite and abdbda: multiple_query()
	* DbMother fields methods moved on _DbMap
	* MotherFusion: new __init__ arg `side`


VERSION = 0.6.2-r1

	* relParams debugged: session was not exported
	* MotherFusion: fields handler improved


VERSION = 0.6.2

	* cleaned doc: Lifes -> Lifeforms
	* DbOne was calling twice _connect()
	* Removed HeavyBug on Sqlite-Map creation
	* mothermapper -f: removed __import__, used execfile()
	* MotherFusion: it's now possible to specify jfilter
	* debugged arg_format usage
	* MotherFusion: debugged ({}, {}..) for selectWaht()
	* An interactive example for SQLite is provided
	* Examples for SQLite ans Postgres are provided
	* MotherFusion: __len__ method
	* MotherFusion: introduces distinct
	* MotherFusion: introduced order
	* MohterFusion is explained on the Manual
	* `mothermapper -f help` prints a human readable help
	* MotherFusion is able to exclude redundant params
	* MotherFusion can load relation params
	* new class MotherFusion
	* code cleaned
	* new _DbMap._sqlFreeJoin method
	* _sqlJoin&C moved from MotherManager to _DbMap class
	* mothermapper --help: deleted -C option


VERSION = 0.6.1

	* defconf.py -> _defconf.py
	* def_pgres.py -> _def_pgres.py
	* def_sqlite.py -> _def_sqlite.py
	* mothermapper: removed *C option, added -P and -S
	* added new modules: def_pgres and def_sqlite
	* debugging MohterManager methods


VERSION = 0.6.0

	* Sqlite Support
	* rewrited initalization methods 
	* dbda removed: added abdbda
	* added specific db interface: postgres.py sqlite.py
	* mothermapper uses always a persistent connection