@@ -1,6 +1,7 @@
 
 VERSION = 0.6.3
 
+	* sqlite.py postgres.py: ifaces aligned
 	* rewrited some methods on db interfaces
 	* dropped the DictCursor psycopg2 feature
 	* manual corrections and new index layout
